--- a/css/slider.css
+++ b/css/slider.css
@@ -1,3 +1,16 @@
+h2 {
+	display: inline-block;
+}
 .slider {
+	display: inline-block;
 	margin-top: 20px;
+	width: 200px;
+}
+
+.slider p {
+	height: 32px;
+}
+
+button {
+	display: inline-block
 }
