single object for visualisation

--- a/css/styles.css
+++ b/css/styles.css
@@ -289,3 +289,10 @@ input[type="range"]::-webkit-slider-thumb {
 .slider .value {
 	font-weight: bold;
 }
+
+/* Visualisation */
+.visualisation {
+	display: block;
+	width: 100%;
+	height: 140px;
+}
