--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,15 @@ body {
     font: 16px/1.4 Open Sans, Helvetica, Arial, sans-serif;
 }
 
+video {
+	display: none;
+}
+
+#ar-canvas {
+	width: 100%;
+	height: 400px;
+}
+
 a {
     color: #069;
     text-decoration: none;
@@ -294,5 +303,5 @@ input[type="range"]::-webkit-slider-thumb {
 .visualisation {
 	display: block;
 	width: 100%;
-	height: 50px;
+	height: 70px;
 }
